--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <header>
               <h4><a href="https://www.farfetch.com">Farfetch</a></h4>
               <div class="meta">
-                <div>The Global Destination For Modern Luxury</div>
+                <div>The Global Destination For Modern Luxury.</div>
               </div>
             </header>
             <div class="timeline">
@@ -88,7 +88,7 @@
             <header>
               <h4><a href="https://www.farfetch.com">Capgemini Engineering</a></h4>
               <div class="meta">
-                <div>The Global Destination For Modern Luxury</div>
+                <div>Global innovation and engineering consulting company.</div>
               </div>
             </header>
             <div class="timeline">
