--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         
           <article>
             <header>
-              <h4><a href="https://www.farfetch.com">Capgemini Engineering</a></h4>
+              <h4><a href="https://www.capgemini.com/about-us/who-we-are/our-brands/capgemini-engineering/">Capgemini Engineering</a></h4>
               <div class="meta">
                 <div>Global innovation and engineering consulting company.</div>
               </div>
